--- a/dbapps.json
+++ b/dbapps.json
@@ -10,7 +10,12 @@
         "youtube":"",
         "version":"2.0",
         "dates":"Mars 2023",
-        "category":"Mobile",
+        "category":"mobile",
+        "auteur":"Armand MOUELE",
+        "email":"",
+        "telephone":"",
+        "duree":"1 mois",
+        "pourcentage":"100",
         "annee":"2023"
     },
     {
@@ -24,7 +29,12 @@
         "youtube":"",
         "version":"1.0",
         "dates":"Janvier 2023",
-        "category":"Desktop",
+        "category":"desktop",
+        "auteur":"Armand MOUELE",
+        "email":"",
+        "telephone":"",
+        "duree":"1 mois",
+        "pourcentage":"100",
         "annee":"2023"
     },
     {
@@ -38,7 +48,12 @@
         "youtube":"",
         "version":"1.0",
         "dates":"Décembre 2022",
-        "category":"Mobile",
+        "category":"mobile",
+        "auteur":"Armand MOUELE",
+        "email":"",
+        "telephone":"",
+        "duree":"1 mois",
+        "pourcentage":"100",
         "annee":"2022"
     },
     {
@@ -52,7 +67,12 @@
         "youtube":"",
         "version":"2.0",
         "dates":"Avril 2023",
-        "category":"Mobile",
+        "category":"mobile",
+        "auteur":"Armand MOUELE",
+        "email":"",
+        "telephone":"",
+        "duree":"1 mois",
+        "pourcentage":"100",
         "annee":"2023"
     },
     {
@@ -66,7 +86,12 @@
         "youtube":"",
         "version":"2.0",
         "dates":"Septembre 2022",
-        "category":"Desktop",
+        "category":"desktop",
+        "auteur":"Armand MOUELE",
+        "email":"",
+        "telephone":"",
+        "duree":"1 mois",
+        "pourcentage":"100",
         "annee":"2022"
     },
     {
@@ -80,7 +105,12 @@
         "youtube":"",
         "version":"2.0",
         "dates":"Février 2023",
-        "category":"Mobile",
+        "category":"mobile",
+        "auteur":"Armand MOUELE",
+        "email":"",
+        "telephone":"",
+        "duree":"1 mois",
+        "pourcentage":"100",
         "annee":"2023"
     },
     {
@@ -94,7 +124,12 @@
         "youtube":"",
         "version":"2.0",
         "dates":"Mars 2023",
-        "category":"Desktop",
+        "category":"desktop",
+        "auteur":"Armand MOUELE",
+        "email":"",
+        "telephone":"",
+        "duree":"1 mois",
+        "pourcentage":"100",
         "annee":"2023"
     },
     {
@@ -108,7 +143,12 @@
         "youtube":"",
         "version":"2.0",
         "dates":"Mars 2023",
-        "category":"Desktop",
+        "category":"desktop",
+        "auteur":"Armand MOUELE",
+        "email":"",
+        "telephone":"",
+        "duree":"1 mois",
+        "pourcentage":"100",
         "annee":"2023"
     },
     {
@@ -122,7 +162,12 @@
         "youtube":"",
         "version":"1.0",
         "dates":"Février 2024",
-        "category":"Mobile",
+        "category":"mobile",
+        "auteur":"Armand MOUELE",
+        "email":"",
+        "telephone":"",
+        "duree":"1 mois",
+        "pourcentage":"100",
         "annee":"2024"
     },
     {
@@ -136,7 +181,12 @@
         "youtube":"",
         "version":"1.0",
         "dates":"Mars 2024",
-        "category":"Mobile",
+        "category":"mobile",
+        "auteur":"Armand MOUELE",
+        "email":"",
+        "telephone":"",
+        "duree":"1 mois",
+        "pourcentage":"100",
         "annee":"2024"
     }
 ]
